<resources>
    <string name="app_name">贷属罐</string>


    <!-- 通用 -->
    <string name="countdown_code_send_succeed">验证码已发送，请注意查收</string>
    <string name="two_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="phone_input_error">手机号输入不正确</string>
    <string name="setting_sure">确定</string>
    <string name="setting_cancel">取消</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">借款</string>
    <string name="home_nav">账单</string>
    <string name="home_nav_me">我的</string>

    <string name="black_title">个人信用报告</string>

    <string name="home_ocr">人脸识别</string>
    <string name="home_id_Card">身份证识别</string>
    <string name="home_certification">已认证</string>

    <string name="ocr_title">身份证拍照</string>
    <string name="ocr_require">请按要求拍摄身份证</string>
    <string name="ocr_positive">点击拍摄身份证正面（人像面）</string>
    <string name="ocr_reverse">点击拍摄身份证背面（国徽面）</string>
    <string name="ocr_identify">识别</string>
    <string name="ocr_advice">建议</string>


    <string name="phone_title">添加-手机号码</string>
    <string name="phone_name">手机认证</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_password">服务密码</string>
    <string name="phone_sure">确定</string>



    <string name="login_registered">注册</string>
    <string name="login">登录</string>
    <string name="login_phone_hint">手机号/身份证号码</string>
    <string name="login_password_hint">请输入</string>
    <string name="login_phone">账号</string>
    <string name="login_password">密码</string>
    <string name="login_password_verification_code">请输入验证码</string>
    <string name="login_verification_code">验证码</string>
    <string name="login_send_code">发送短信</string>
    <string name="login_forget_password">找回密码</string>

    <string name="my_login_registered">登陆/注册</string>
    <string name="my_code">扫一扫</string>
    <string name="my_authorization">我的授权</string>

    <string name="my_help">帮助</string>
    <string name="my_phone">联系客服</string>
    <string name="my_setting">设置</string>
    <string name="my_share">分享APP</string>

    <string name="setting_password">登录密码</string>
    <string name="setting_hint_password">修改登录密码</string>
    <string name="setting_phone">手机号码</string>
    <string name="setting_hint_phone">修改手机号码</string>
    <string name="setting_exit">退出登录</string>


    <string name="certification_title">我的认证</string>
    <string name="certification_operation">修改</string>
    <string name="id_title">身份证拍照</string>
    <string name="face_title">人脸识别</string>
    <string name="live_failure">检测失败</string>
    <string name="live_restart">重新验证</string>
    <string name="facedectfail_actionblend">检测失败,请按照提示做出相应的动作</string>

    <string name="confrim_title">确认信息</string>

    <string name="authorization_title">我的授权</string>
    <string name="authorization_left">申请中</string>
    <string name="authorization_right">还款中</string>


    <string name="setting_exit_password">修改密码</string>
    <string name="setting_exit_pahoe">修改手机号码</string>


    <string name="help_title_name">帮助</string>

</resources>
