<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_card_identify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">


    <com.hjq.bar.TitleBar
        android:id="@+id/tb_ocr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/ocr_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/ocr_require"
        android:textColor="@color/cl_f333333"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_ocr_zm"
            android:layout_width="207dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/bt_sfz_zm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/ocr_positive"
            android:textColor="@color/cl_f333333" />

        <ImageView
            android:id="@+id/vi_ocr_fm"
            android:layout_width="207dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/bg_sfz_fm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ocr_reverse"
            android:textColor="@color/cl_f333333" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_identify"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:background="@color/cl_ff8200"
        android:text="@string/ocr_identify"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ocr_advice"
        android:textColor="@color/cl_666666"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1.25"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/take_picture_stand1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:src="@mipmap/take_picture_stand2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:src="@mipmap/take_picture_stand3" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:src="@mipmap/take_picture_stand4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="14dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="21px"
                android:layout_height="18px"
                android:src="@mipmap/ic_lu_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="拍照标准"
                android:textColor="@color/cl_929191"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="21px"
                android:layout_height="18px"
                android:src="@mipmap/ic_ocr_false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="拍照不完全"
                android:textColor="@color/cl_929191"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="21px"
                android:layout_height="18px"
                android:src="@mipmap/ic_ocr_false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="拍照模糊"
                android:textColor="@color/cl_929191"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="21px"
                android:layout_height="18px"
                android:src="@mipmap/ic_ocr_false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="光线太暗/亮"
                android:textColor="@color/cl_929191"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
