<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/my_setting" />

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="关于"
            android:drawablePadding="12dp"
            android:textColor="@color/cl_f333333"
            android:drawableLeft="@mipmap/ic_about"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="V1.0.0"
            android:textColor="#F14105"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:visibility="gone"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_phone"
            android:textColor="@color/cl_f333333"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/ic_next"
            android:gravity="center"
            android:text="@string/setting_hint_phone"
            android:textColor="@color/cl_929191"
            android:textSize="13sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="安全退出"
        android:textColor="@color/cl_f333333"
        android:textSize="18sp" />
</LinearLayout>